Fix total segments count logic